log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
spec:
  rules:
    - http:
        paths:
          - path: /logoutput
            pathType: Prefix
            backend:
              service:
                name: logoutput-svc
                port:
                  number: 2345
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoapp-svc
                port:
                  number: 2346
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 2347
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todobackend-svc
                port:
                  number: 2348
